Configuration react-redux redux

--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -5,6 +5,8 @@
 // Views
 @import './views/login';
 @import './views/register';
+@import './views/home';
 
 // Components
 @import './components/buttons';
+@import './components/links';
