--- a/src/Styles/components/_buttons.scss
+++ b/src/Styles/components/_buttons.scss
@@ -14,6 +14,9 @@
 .btn-block{
     width: 100%;
 }
+.btn-block2{
+    width: 50%;
+}
 
 .btn-primary{
     background-color: darken($color: $primary, $amount: 15);
